<?xml version="1.0" encoding="utf-8"?>
<!--
  French Revolutionary Calendar Android Widget
  Copyright (C) 2011 - 2014 Carmen Alvarez
  
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 2
  of the License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with this program; if not, write to the Free Software
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->
<resources>

    <string name="app_name">French Calendar</string>
    <string name="app_name_wide">French Calendar (horizontal)</string>
    <string name="app_name_narrow">French Calendar (vertical)</string>
    <string name="app_name_minimalist">French Calendar (minimalist)</string>
    <string name="app_full_name">French Calendar</string>
    <string name="author" translatable="false">Carmen Alvarez (c@rmen.ca)</string>
    <string name="description">Widget which displays the current date and time in the French Republican Calendar.</string>
    <string name="credits">Credits:</string>
    <string name="wikipedia">* Wikipedia article: http://en.wikipedia.org/wiki/French_Republican_Calendar</string>
    <string name="equinox_tool">* AstroLib C++ program by Mark Huss, to determine the first day of autumn in each year: http://mhuss.com/AstroLib/</string>
    <string name="github">Project on GitHub:</string>
    <string name="link_github" translatable="false">https://github.com/caarmen/FRCAndroidWidget</string>
    <string name="widget_settings">French Calendar Settings</string>
    <string name="setting_method">Calculation method</string>
    <string name="setting_method_summary">How the first day of each year is determined: %s</string>
    <string name="setting_detailed_view">Detailed view</string>
    <string name="setting_detailed_view_summary">%s</string>
    <string name="setting_language">Language</string>
    <string name="setting_language_summary">%s</string>
    <string name="share_chooser_title">Choose an app</string>
    <string name="popup_action_share">Share</string>
    <string name="popup_action_settings">Settings</string>
    <string name="share_subject">%1$s, %2$d %3$s %4$d</string>
    <string name="share_body">Today is %1$s, %2$d %3$s %4$d.
\n\n\
The current time is %5$s.
\n\n\
%6$s of today is the %7$s.
\n\n\
It has been %8$d days since the start of the Republic.</string>
    <string name="about">About</string>

</resources>